# vacancy_text

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  requirements_dev.txt
data/: vacancies.json
formatter/: format.py  formatter.py
groq_client/: groq_client.py
parser/: index.html  parser.py  vacancies.json  vacancies_manual.json
templates/: index.html
vacancy_text/: main.py
