[tool.poetry]
name = "vacancy-text"
version = "0.1.0"
description = ""
authors = ["Denis Safiullin <fckninja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}
httpx = "^0.27.0"
markdownify = "^0.13.1"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
